# kinect_2

./: .github.sh.swo  .github.sh.swp  CMakeLists.txt  github.sh  main.cpp
include/: K4a_Grabber.hpp  rotate_cloud.hpp
src/: K4a_Grabber.cpp  rotate_cloud.cpp
